design image box

--- a/index.html
+++ b/index.html
@@ -8,8 +8,64 @@
     <link rel="stylesheet" href="style/block.css">
 </head>
 <body>
-    <h2>This is third project heading</h2>
+    <div>
+        <h2>This is third project heading</h2>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur saepe facilis excepturi pariatur qui itaque eos voluptates illo alias, obcaecati provident, laboriosam cum explicabo! Inventore accusamus architecto tempore unde odit! Libero et velit officia, inventore cum porro tenetur. Necessitatibus at non dolores, tempore assumenda rerum sit ea, ullam suscipit dolorem nulla beatae et. Tempore possimus corrupti adipisci molestiae sit cum nisi, maxime id in ratione! Dicta adipisci autem perferendis sit saepe tenetur illo blanditiis aliquid. Repellat quas quisquam expedita soluta deleniti esse iure nam similique laboriosam iusto, ut eius facere ipsam, labore tempore. At aut numquam, amet beatae ducimus est.</p>
+    <p class="frist-content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur saepe facilis excepturi pariatur qui itaque eos voluptates illo alias, obcaecati provident, laboriosam cum explicabo! Inventore accusamus architecto tempore unde odit! Libero et velit officia, inventore cum porro tenetur. Necessitatibus at non dolores, tempore assumenda rerum sit ea, ullam suscipit dolorem nulla beatae et. Tempore possimus corrupti adipisci molestiae sit cum nisi, maxime id in ratione! Dicta adipisci autem perferendis sit saepe tenetur illo blanditiis aliquid. Repellat quas quisquam expedita soluta deleniti esse iure nam similique laboriosam iusto, ut eius facere ipsam, labore tempore. At aut numquam, amet beatae ducimus est.</p>
+    </div>
+
+    <div id="image-box">
+        <div class="container">
+            <div class="inner-content">
+                <img src="images/image-.avif" alt="frist box image" class="same-img">
+                <h3 class="same-title">This is Frist image box title </h3>
+                <p class="same-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime corporis accusantium architecto illo placeat ipsum delectus. Facere eligendi voluptatum, odio harum quasi, corporis excepturi laudantium qui nostrum atque, animi asperiores.</p>
+
+                <button class="btn">Click Me!</button>
+
+            </div>
+
+            <div class="inner-content">
+                <img src="images/image-1.avif" alt="frist box image" class="same-img">
+                <h3 class="same-title">This is Second image box title</h3>
+                <p class="same-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime corporis accusantium architecto illo placeat ipsum delectus. Facere eligendi voluptatum, odio harum quasi, corporis excepturi laudantium qui nostrum atque, animi asperiores.</p>
+
+                <button class="btn">Click Me!</button>
+            </div>
+
+            <div class="inner-content no-mar">
+                <img src="images/image-2.avif" alt="frist box image" class="same-img">
+                <h3 class="same-title">This is Third image box title </h3>
+                <p class="same-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime corporis accusantium architecto illo placeat ipsum delectus. Facere eligendi voluptatum, odio harum quasi, corporis excepturi laudantium qui nostrum atque, animi asperiores.</p>
+
+                <button class="btn">Click Me!</button>
+            </div>
+
+            <div class="inner-content">
+                <img src="images/image-3.avif" alt="frist box image" class="same-img">
+                <h3 class="same-title">This is Fourth image box title</h3>
+                <p class="same-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime corporis accusantium architecto illo placeat ipsum delectus. Facere eligendi voluptatum, odio harum quasi, corporis excepturi laudantium qui nostrum atque, animi asperiores.</p>
+
+                <button class="btn">Click Me!</button>
+            </div>
+
+            <div class="inner-content">
+                <img src="images/image-4.avif" alt="frist box image" class="same-img">
+                <h3 class="same-title">This is Fifth image box title </h3>
+                <p class="same-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime corporis accusantium architecto illo placeat ipsum delectus. Facere eligendi voluptatum, odio harum quasi, corporis excepturi laudantium qui nostrum atque, animi asperiores.</p>
+
+                <button class="btn">Click Me!</button>
+            </div>
+
+            <div class="inner-content no-mar">
+                <img src="images/image-5.avif" alt="frist box image" class="same-img">
+                <h3 class="same-title">This is Sixth image box title</h3>
+                <p class="same-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime corporis accusantium architecto illo placeat ipsum delectus. Facere eligendi voluptatum, odio harum quasi, corporis excepturi laudantium qui nostrum atque, animi asperiores.</p>
+
+                <button class="btn">Click Me!</button>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
